--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-xs-2">
-    				<div id="fh5co-logo"><a href="index.html">Invitación<strong>.</strong></a></div>
+    				<div id="fh5co-logo"><a href="index.html">Boda<strong>.</strong></a></div>
     			</div>
     			<div class="col-xs-10 text-right menu-1">
     				<ul>
-    					<li class="active"><a href="index.html">Boda</a></li>
+    					<li class="active"><a href="index.html"></a></li>
     				</ul>
     			</div>
     		</div>
@@ -208,7 +208,7 @@
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline animate-box">
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/330.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Ceremonia</h3>
@@ -220,7 +220,7 @@
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/700.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Boda Civil</h3>
@@ -232,7 +232,7 @@
 							</div>
 						</li>
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/800.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Recepción</h3>
