--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 			<div class="couple-wrap animate-box">
 				<div class="couple-half">
 					<div class="groom">
-						<img src="images/groom.jpg" alt="groom" class="img-responsive">
+						<img src="images/invitacion-1-2.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
 						<h3>Jade Aragón</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<p>Dos almas errantes, cada una con su propia historia, convergieron en un cruce inesperado. Las diferencias, en lugar de separar, construyeron puentes de comprensión. Con risas,</p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -134,7 +134,7 @@
 					</div>
 					<div class="desc-bride">
 						<h3>Martin Manrique</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<p>aventuras y momentos imprevistos, descubrieron que juntas, las piezas encajaban. La vida tiene maneras misteriosas de unir caminos, y este es solo el comienzo de su viaje compartido.</p>
 					</div>
 				</div>
 			</div>
@@ -148,6 +148,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>Nuestros eventos especiales</span>
 					<h2>Ubicaciones</h2>
+					<p style="color: #FFFFFF;">Respetuosamente, NO NIÑOS</p>
 				</div>
 			</div>
 			<div class="row">
@@ -262,80 +263,68 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-6.jpg); "> 
-						<a href="images/invitacion-6.jpg">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-10.jpg); "> 
+						<a href="images/invitacion-10.jpg">
 							<div class="case-studies-summary">
-								<span>14 Photos</span>
-								<h2>Two Glas of Juice</h2>
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-1.jpg); ">
 						<a href="#" class="color-2">
 							<div class="case-studies-summary">
-								<span>30 Photos</span>
-								<h2>Timer starts now!</h2>
 							</div>
 						</a>
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-8.jpg); ">
 						<a href="#" class="color-3">
 							<div class="case-studies-summary">
-								<span>90 Photos</span>
-								<h2>Beautiful sunset</h2>
+
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-19.jpg); ">
 						<a href="#" class="color-4">
 							<div class="case-studies-summary">
-								<span>12 Photos</span>
-								<h2>Company's Conference Room</h2>
 							</div>
 						</a>
 					</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-6.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
-									<span>50 Photos</span>
-									<h2>Useful baskets</h2>
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-16.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-									<span>45 Photos</span>
-									<h2>Skater man in the road</h2>
 								</div>
 							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-13.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-									<span>35 Photos</span>
-									<h2>Two Glas of Juice</h2>
+									<span></span>
+									<h2></h2>
 								</div>
 							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-2.jpg); "> 
 							<a href="#" class="color-5">
 								<div class="case-studies-summary">
-									<span>90 Photos</span>
-									<h2>Timer starts now!</h2>
+									<span></span>
+									<h2></h2>
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-7.jpg); ">
 							<a href="#" class="color-6">
 								<div class="case-studies-summary">
-									<span>56 Photos</span>
-									<h2>Beautiful sunset</h2>
+
 								</div>
 							</a>
 						</li>
