--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Opciones de hospedaje</h2>
+					<p>Adjuntamos algunas de las opciones de hospedaje. Recordar que los precios pueden cambiar con el tiempo de anticipación u otros factores</p>
 					<p><a href="https://drive.google.com/file/d/1fyOSAFyXZB-w8rnY4IXHx0iAtWyN4D79/view?usp=sharing " target="_blank" class="btn btn-default btn-sm">Hospedajes</a></p>
 				</div>
 			</div>
@@ -404,33 +405,45 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Are You Attending?</h2>
-					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
+					<h2>¿Vas a asistir?</h2>
+					<p>Por favor, llena el formulario y confirma tu asistencia a través de WhatsApp. Gracias.</p>
 				</div>
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-10 col-md-offset-1">
 					<form class="form-inline">
-						<div class="col-md-4 col-sm-4">
+						<div class="col-md-6 col-sm-6">
 							<div class="form-group">
-								<label for="name" class="sr-only">Name</label>
-								<input type="name" class="form-control" id="name" placeholder="Name">
+								<label for="name" class="sr-only">Nombre</label>
+								<input type="name" class="form-control" id="name" placeholder="Nombre">
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="Email">
-							</div>
+						<div class="col-md-3 col-sm-3">
+							<button type="button" class="btn btn-default btn-block" style="text-align: center; padding-top: 15px; padding-bottom: 15px; background-color: #556B2F;" onclick="confirmWith('Jade', '+19704703227')">Jade</button>
 						</div>
-						<div class="col-md-4 col-sm-4">
-							<button type="submit" class="btn btn-default btn-block">I am Attending</button>
+						<div class="col-md-3 col-sm-3">
+							<button type="button" class="btn btn-default btn-block" style="text-align: center; padding-top: 15px; padding-bottom: 15px; background-color: #556B2F;" onclick="confirmWith('Martin', '+19704703925')">Martin</button>
 						</div>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
+	
+	<script>
+		function confirmWith(name, number) {
+			var attendeeName = document.getElementById('name').value;
+			var message = "Hola " + name + ", soy " + attendeeName + " y quiero confirmar mi asistencia.";
+			var encodedMessage = encodeURIComponent(message);
+			var whatsappUrl = "https://wa.me/" + number + "?text=" + encodedMessage;
+			window.location.href = whatsappUrl;
+		}
+	</script>
+	
+	
+	
+	
+	
 
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
