--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-xs-2">
-    				<div id="fh5co-logo"><a href="index.html">Boda<strong>.</strong></a></div>
+    				<div id="fh5co-logo"><a href="index.html"><strong></strong></a></div>
     			</div>
     			<div class="col-xs-10 text-right menu-1">
     				<ul>
@@ -139,9 +139,14 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+			<span>En compañía de nuestros pilares</span>
+			<h3 style="color: #556B2F; font-style: italic; font-family: 'Work Sans', Arial, sans-serif;">María Lourdes Aragón Valenzuela & Teresa de Jesus Arriola Escutia</h3>
+
+		</div>
 	</div>
 
-	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);">
+	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/sc.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -168,7 +173,7 @@
 										<span>Viernes 24</span>
 										<span>November, 2023</span>
 									</div>
-									<p>Playa Hotel Posada, Boulevard M. F, Blvd. Manlio Fabio Beltrones Km 11.5, 85506 San Carlos, Son., México</p>
+									<p>Playa Hotel Posada, Boulevard M. F, Blvd. Manlio Fabio Beltrones, San Carlos, Sonora</p>
 									<p><a href="https://goo.gl/maps/qayr3muFb9YSzB2w6" target="_blank" class="btn btn-default btn-sm">Ubicación</a></p>
 								</div>
 							</div>
@@ -185,7 +190,7 @@
 										<span>Viernes 24</span>
 										<span>November, 2023</span>
 									</div>
-									<p>Jardínes hacienda, Bahía San Carlos s/n Int. Hacienda Tetakawi, San Carlos, Son., México</p>
+									<p>Jardínes hacienda, Bahía San Carlos s/n Int. Hacienda Tetakawi, San Carlos, Sonora</p>
 									<p><a href="https://goo.gl/maps/5ENRV5T4EXn6dvqF8" target="_blank" class="btn btn-default btn-sm">Ubicación</a></p>
 								</div>
 							</div>
@@ -269,7 +274,7 @@
 						</a>
 					</li>
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-1.jpg); ">
-						<a href="#" class="color-2">
+						<a href="images/invitacion-1.jpg" class="color-2">
 							<div class="case-studies-summary">
 							</div>
 						</a>
@@ -277,34 +282,34 @@
 
 
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-8.jpg); ">
-						<a href="#" class="color-3">
+						<a href="images/invitacion-8.jpg" class="color-3">
 							<div class="case-studies-summary">
 
 							</div>
 						</a>
 					</li>
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-19.jpg); ">
-						<a href="#" class="color-4">
+						<a href="images/invitacion-19.jpg" class="color-4">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-6.jpg); ">
-							<a href="#" class="color-3">
+							<a href="images/invitacion-6.jpg" class="color-3">
 								<div class="case-studies-summary">
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-16.jpg); ">
-							<a href="#" class="color-4">
+							<a href="images/invitacion-16.jpg" class="color-4">
 								<div class="case-studies-summary">
 								</div>
 							</a>
 						</li>
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-13.jpg); ">
-							<a href="#" class="color-4">
+							<a href="images/invitacion-13.jpg" class="color-4">
 								<div class="case-studies-summary">
 									<span></span>
 									<h2></h2>
@@ -313,7 +318,7 @@
 						</li>
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-2.jpg); "> 
-							<a href="#" class="color-5">
+							<a href="images/invitacion-2.jpg" class="color-5">
 								<div class="case-studies-summary">
 									<span></span>
 									<h2></h2>
@@ -321,7 +326,7 @@
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/invitacion-7.jpg); ">
-							<a href="#" class="color-6">
+							<a href="images/invitacion-7.jpg" class="color-6">
 								<div class="case-studies-summary">
 
 								</div>
@@ -333,14 +338,14 @@
 		</div>
 	</div>
 
-	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);">
+	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/sc1.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Nuestros eventos especiales</span>
-					<h2>Ubicaciones</h2>
-					<p style="color: #FFFFFF;">Respetuosamente, no niños</p>
+					<span>Si quieres tener un detalle</span>
+					<h2>Mesa de regalos</h2>
+					<p style="color: #FFFFFF;">Algo ligero y que pueda viajar con nosotros</p>
 				</div>
 			</div>
 			<div class="row">
@@ -349,36 +354,16 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Ceremonia principal</h3>
-									<div class="event-col">
-										<i class="icon-clock"></i>
-										<span>3:30 PM</span>
-										<span>4:30 PM</span>
-									</div>
-									<div class="event-col">
-										<i class="icon-calendar"></i>
-										<span>Viernes 24</span>
-										<span>November, 2023</span>
-									</div>
-									<p>Playa Hotel Posada, Boulevard M. F, Blvd. Manlio Fabio Beltrones Km 11.5, 85506 San Carlos, Son., México</p>
-									<p><a href="https://goo.gl/maps/qayr3muFb9YSzB2w6" target="_blank" class="btn btn-default btn-sm">Ubicación</a></p>
+									<h3>Lluvia de sobres</h3>
+									<p>Tradición de regalar dinero en un sobre el día del evento.</p>
+									<p>Contaremos con sobres en el evento</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Recepción</h3>
-									<div class="event-col">
-										<i class="icon-clock"></i>
-										<span>8:00 PM</span>
-										<span>2:00 AM</span>
-									</div>
-									<div class="event-col">
-										<i class="icon-calendar"></i>
-										<span>Viernes 24</span>
-										<span>November, 2023</span>
-									</div>
-									<p>Jardínes hacienda, Bahía San Carlos s/n Int. Hacienda Tetakawi, San Carlos, Son., México</p>
-									<p><a href="https://goo.gl/maps/5ENRV5T4EXn6dvqF8" target="_blank" class="btn btn-default btn-sm">Ubicación</a></p>
+									<h3>Datos bancarios</h3>
+									<p>Número de cuenta: 151 390 9934</p>
+									<p>Titular de la cuenta: Martin Eduardo Manrique Arriola</p>
 								</div>
 							</div>
 						</div>
