--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
+	<meta property="og:title" content="Boda Jade & Martin"/>
+	<meta property="og:image" content="images\invitacion.jpg"/>
+	<meta property="og:url" content="opemsmart.com"/>
+	<meta property="og:site_name" content="Invitación"/>
 	<meta property="og:description" content=""/>
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
