--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Boda Jade & Martin"/>
-	<meta property="og:image" content="images\invitacion.jpg"/>
-	<meta property="og:url" content="opemsmart.com"/>
+	<meta property="og:image" content="images/invitacion.jpg"/>
+	<meta property="og:url" content="https://opemsmart.com/"/>
 	<meta property="og:site_name" content="Invitación"/>
-	<meta property="og:description" content=""/>
+	<meta property="og:description" content="Te invitamos a nuestro gran evento"/>
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
