--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Boda Jade & Martin"/>
-	<meta property="og:image" content="images/invitacion.jpg"/>
+	<meta property="og:image" content="https://opemsmart.com/images/invitacion.jpg"/>
 	<meta property="og:url" content="https://opemsmart.com/"/>
 	<meta property="og:site_name" content="Invitación"/>
 	<meta property="og:description" content="Te invitamos a nuestro gran evento"/>
