fixed text on intinerario

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 									<span class="date">Noviembre 24, 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Inmediatamente después de la ceremonia, nos trasladaremos al hermoso Jardín Hacienda. Este espacio al aire libre, con su aire romántico y toques naturales, será el escenario perfecto para oficializar la unión de dos almas. Te pedimos estar atentos para no perderte este momento tan especial.</p>
+									<p>Después de un breve interludio, nos trasladaremos al hermoso Jardín Hacienda. Este espacio al aire libre, con su aire romántico y toques naturales, será el escenario perfecto para oficializar la unión de dos almas. Te pedimos estar atentos para no perderte este momento tan especial.</p>
 								</div>
 							</div>
 						</li>
